--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap'); */
+
+body {
+  font-family: var(--font-poppins), sans-serif;
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -28,5 +35,5 @@ body::-webkit-scrollbar {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, Poppins, sans-serif;
 }
